--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,7 @@
 \usepackage{amsfonts}
 \usepackage{arydshln}
 \usepackage{booktabs}
+\usepackage{microtype}
 %\usepackage{tablefootnote}
 \usepackage{threeparttable}
 %\pagestyle{ThesisHeadings}
@@ -48,7 +49,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-\addbibresource{./Biblio/biblio.bib}
+%\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
