Chapitre 06, mise à jour

--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1528,3 +1528,15 @@
 	pages = {983--1049},
 	file = {Fefferman et al. - 2016 - Testing the manifold hypothesis.pdf:/home/noemie/Zotero/storage/IIIEL58U/Fefferman et al. - 2016 - Testing the manifold hypothesis.pdf:application/pdf},
 }
+
+
+@inproceedings{vaswani_attention_2017,
+	title = {Attention is {All} you {Need}},
+	volume = {30},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
+	publisher = {Curran Associates, Inc.},
+	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, Łukasz and Polosukhin, Illia},
+	editor = {Guyon, I. and Luxburg, U. Von and Bengio, S. and Wallach, H. and Fergus, R. and Vishwanathan, S. and Garnett, R.},
+	year = {2017},
+}
+
