dernier commit avant relecture

--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -34,10 +34,13 @@ avec $\epsilon\m{i}$ un bruit sur les entrées.
 La dépendance entre modalités est définie par la dimension choisie pour $U$.
 Une variable $U$ en une dimension paramètre des points placés sur une courbe en une dimension~; $U$ en 2 dimensions paramètre une surface 2D. 
 
-Dans cette série d'expériences, nous étudions un modèle dans lequel chaque modalité est unidimensionnelle. Chaque modalité correspond à une coordonnée d'un objet géométrique en $K$ dimensions, avec  $K$ le nombre de cartes. Afin de définir une dépendance entre entrées, nous les prenons sur une variété de dimension inférieure, $k$,  paramétrée par $U \in [0,1]^k$.
-Ce modèle est général~: au pire, $U$ correspond à la dimension totale des entrées. 
-Par ailleurs, de nombreux modèles d'entrées réelles se placent sur une variété (\emph{manifold}) de dimension réduite, comme nous l'avions vu au chapitre \ref{chap:repr} pour des images d'un même objet 3D vu par différents angles. Le choix d'un modèle d'entrées géométriques situées sur une variété de dimension inférieure est donc justifié comme modèle expérimental simplifié.
-Dans ce chapitre, nous considérons des architectures de deux et trois cartes et prenons donc des entrées de dimension totale $K = 2$ et $K = 3$.
+Dans cette série d'expériences, nous étudions un modèle dans lequel chaque modalité est en une dimension. Chaque modalité correspond à une coordonnée d'un objet géométrique en $K$ dimensions, avec  $K$ le nombre de cartes. 
+
+Dans ce chapitre, nous considérons des architectures de deux et trois cartes et prenons donc des entrées de dimension totale 2 et 3.
+Afin de définir une dépendance entre entrées, nous les prenons sur une variété de dimension inférieure $k$ paramétrée par $U \in [0,1]^k$.
+Ce modèle est général~: au pire, $U$ correspond à la dimension totale des entrées. Par exemple, une courbe en deux ou trois dimensions est une variété de dimension inférieure à la dimension des entrées.
+Par ailleurs, de nombreux modèles d'entrées réelles se placent sur une variété de dimension réduite, comme nous l'avions vu au chapitre \ref{chap:repr} pour des images d'un même objet 3D vu par différents angles. Le choix d'un modèle d'entrées géométriques situées sur une variété de dimension inférieure est donc justifié comme modèle expérimental simplifié.
+
 
 Dans une architecture de deux cartes, nous considérons d'abord des points pour lesquels $U$ est en une dimension~: ils sont situés sur une courbe du plan 2D.
 Nous reviendrons d'abord  sur les conclusions de l'expérience présentée au chapitre représentation, sur des données disposée en cercle (\textbf{A}). L'intérêt de cette courbe est que la disposition est symétrique~: toute entrée $X^{(1)}$ correspond à deux valeurs possibles pour $X^{(2)}$ et inversement.
